# airflow

./: .env  .env.example  .env.twitter-credentials  .gitignore  Makefile  README.md  airflow.cfg  docker-compose.prod.yaml  docker-compose.yaml  requirements.txt  setup.cfg  setup.py
DEPRECATED_localenv_dags/: basic_pipeline.py  pipeline_leggo_content.py  update_pautas.py
dags/: __init__.py  atualiza_parlamentares.py  basic_pipeline.py  get_tweets_from_parlamentares.py  keep_last_backups.py  leggo_geral.py  parlametria_basic_pipeline.py  pipeline_leggo_content.py  pipeline_twitter_development.py  pipeline_twitter_production.py  pipeline_twitter_staging.py  pipeline_votacoes.py  process_anotacoes.py  process_entidades.py  process_new_tweets.py  process_pressao.py  process_tweets.py  update_pautas.py
docker/: Dockerfile.dev  Dockerfile.prod
leggo/atualiza_parlamentares/: Dockerfile  Makefile  main.py  run.sh  setup.cfg  setup.py
leggo/atualiza_parlamentares/atualiza_parlamentares.egg-info/: PKG-INFO  SOURCES.txt
leggo/atualiza_parlamentares/src/: constants.py  fetch_deputados.py  fetch_senadores.py  process_parlamentares.py  schemas.py
leggo_scripts/: update_leggo_data.py  util.py
requirements/: common.txt  prod.txt
tasks/: atualiza_parlamentares.py  build_leggo_content.py  fetch_leggo_autores.py  fetch_leggo_props.py  fetch_leggo_relatores.py  keep_last_backups.py  process_anotacoes.py  process_criterios.py  process_disciplina.py  process_entidades.py  process_governismo.py  process_leggo_content.py  process_leggo_data.py  process_new_tweets.py  (+14 more)
(+24 files in other folders)
