[metadata]
name = airflow_parlametria
version = 0.0.1
authors =Fábio Teixeira
description = Airflow environment for Parlametria
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
package_dir=
    =.
[options.packages.find]
where=.
