[metadata]
name = atualiza_parlamentares
version = 0.0.1
authors = Fabio Teixeira
description = Realiza a tualização dos parlamentares
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
package_dir=
    =.

[options.packages.find]
where=.
